package com.sytoss.edu.elevator.bom;

public enum Direction {
    UPWARDS, DOWNWARDS
}
