package com.sytoss.edu.elevator.bom;

import com.sytoss.edu.elevator.bom.enums.EngineState;
import lombok.Setter;

@Setter
public class Engine extends Entity {
    private EngineState engineState;
}
