package com.sytoss.edu.elevator.bom;

public enum EngineState {
    GOING_UP, GOING_DOWN, STAYING
}
