package com.sytoss.edu.elevator.bom;

import org.springframework.stereotype.Component;

public abstract class Floor {
    private int id;
    public void visit(){};
}
