package com.sytoss.edu.elevator.bom;

public interface FloorWithUpButton {
    void pressUpButton ();
}
