package com.sytoss.edu.elevator.bom.enums;

public enum OverWeightState {

    OVERWEIGHT,NOT_OVERWEIGHT
}
