package com.sytoss.edu.elevator.commands;

import org.springframework.stereotype.Component;

import java.util.HashMap;

@Component
public class StopCabinCommand implements Command{
    @Override
    public void execute (HashMap<String, Object> params) {

    }
}
